# pepperpy-console

./: .bandit  .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  conftest.py  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  index.md  installation.md  quickstart.md
docs/api/: index.md
docs/cli/: index.md
docs/examples/: index.md
docs/themes/: index.md
docs/tui/: index.md
examples/: __init__.py  data_table.py  plugin_example.py  simple_app.py
pepperpy_console/: __init__.py
pepperpy_console/cli/: __init__.py  command.py  parser.py  plugin.py
pepperpy_console/themes/: dracula.yaml  high_contrast.yaml  light.yaml
pepperpy_console/tui/: app.py  commands.py  events.py  help.py  keyboard.py  screens.py  theme.py
pepperpy_console/tui/screens/: base.py  loading.py
pepperpy_console/tui/widgets/: accordion.py  base.py  dialog.py  navigation.py  notification.py  progress.py  search_bar.py  tooltip.py  tree_view.py
pipelines/mkdocs/: README.md  go.mod  main.go
pipelines/mkdocs/example/: main.go
scripts/: check.sh
tests/: conftest.py  mocks.py  test_app.py  test_basic.py
tests/cli/: test_command.py  test_parser.py
tests/mocks/: __init__.py  events.py  plugin.py
tests/mocks/pepperpy_console/: __init__.py  app.py  theme.py
tests/mocks/pepperpy_console/cli/: __init__.py  command.py  parser.py
tests/mocks/pepperpy_console/tui/: __init__.py  app.py  screens.py  theme.py
tests/mocks/pepperpy_console/tui/widgets/: accordion.py  base.py
tests/mocks/pepperpy_core/: __init__.py  events.py  plugin.py
tests/mocks/textual/: __init__.py  app.py  containers.py  events.py  message.py  screen.py  widget.py  widgets.py
tests/mocks/textual/widgets/: __init__.py  accordion.py  base.py  basic.py  tree.py
tests/themes/: test_theme_manager.py
tests/tui/: test_app.py  test_screens.py  test_theme.py  test_widgets.py
typings/pepperpy_core/: plugin.pyi
typings/textual/: app.pyi  containers.pyi  widget.pyi
